test/Programs/InvalidTests/dupMatch/dupMatch.fst
f : &{A: Int} -> Int
f c =
  match c with {
    A c -> 5; 
    A c -> 5
  }
